[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-models"
version = "0.1.0"
description = "Generate terrain solids with route inlays from GIS data."
readme = "README.md"
authors = [{ name = "OpenAI Codex" }]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "requests>=2.31",
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "py3dep>=0.17",
  "trimesh>=4.3",
  "scipy>=1.11",
  "mapbox-earcut>=1.0",
  "osmnx>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gis-models = "gis_models.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
